--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,5 +30,8 @@ jobs:
       - name: Set up node_modules
         run: npm ci
 
+      - name: Lint editorconfig
+        run: npm run lint-editorconfig
+
       - name: Lint markdownlint
         run: npm run lint-markdownlint
