--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "private": true,
   "scripts": {
     "prepare": "husky",
+    "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md"
   },
   "devDependencies": {
+    "editorconfig-checker": "^5.1.8",
     "husky": "^9.1.3",
     "lint-staged": "^15.2.7",
     "markdownlint-cli": "^0.41.0"
   },
   "lint-staged": {
+    "*": "npm run lint-editorconfig",
     "*.md": "npx markdownlint"
   }
 }
