chore: create new script(count-docs) in package.json
package.json에 count-docs 스크립트 추가.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "prepare": "husky",
     "lint-editorconfig": "npx editorconfig-checker",
-    "lint-markdownlint": "npx markdownlint **/*.md"
+    "lint-markdownlint": "npx markdownlint **/*.md",
+    "count-docs": "ls -R docs/ | grep .md | wc -l"
   },
   "devDependencies": {
     "editorconfig-checker": "^5.1.8",
