chore: update lint-staged script
editorconfig를 '전체 파일 검사'에서 '스테이지에 올라온 파일만 검사' 할 수 있도록 변경. (속도 및 효율성 증대 목적)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "markdownlint-cli": "^0.41.0"
   },
   "lint-staged": {
-    "*": "npm run lint-editorconfig",
+    "*": "npx editorconfig-checker",
     "*.md": "npx markdownlint"
   }
 }
