chore: create FUNDING.yml and accordingly update .github/sync-client.yml

--- a/.github/sync-client.yml
+++ b/.github/sync-client.yml
@@ -7,6 +7,8 @@ lumirlumir/lumirlumir-configs:
   # ./.github
   - source: ./.github/dependabot.yml
     dest: ./configs/.github/dependabot.yml
+  - source: ./.github/FUNDING.yml
+    dest: ./configs/.github/FUNDING.yml
   # ./.husky
   - source: ./.husky/pre-commit
     dest: ./configs/.husky/pre-commit
