--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "prepare": "husky",
     "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md",
-    "count-docs": "ls -R src/docs/ | grep .md | wc -l"
+    "lint-textlint": "npx textlint -f pretty-error src/docs",
+    "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "devDependencies": {
     "editorconfig-checker": "^5.1.8",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
-    "markdownlint-cli": "^0.41.0"
+    "markdownlint-cli": "^0.41.0",
+    "textlint": "^14.2.0",
+    "textlint-rule-allowed-uris": "^1.0.1"
   },
   "lint-staged": {
     "*": "npx editorconfig-checker",
