--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "private": true,
   "scripts": {
     "prepare": "husky",
+    "lint": "concurrently \"npm:lint-*\"",
     "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md",
     "lint-textlint": "npx textlint -f pretty-error src/docs",
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "editorconfig-checker": "^5.1.8",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
@@ -17,6 +19,7 @@
   },
   "lint-staged": {
     "*": "npx editorconfig-checker",
-    "*.md": "npx markdownlint"
+    "*.md": "npx markdownlint",
+    "src/docs/**/*.md": "npx textlint -f pretty-error"
   }
 }
