--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "scripts": {
     "prepare": "husky",
     "lint": "concurrently \"npm:lint-*\"",
+    "lint-prettier": "npx prettier . --check",
     "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md",
     "lint-textlint": "npx textlint -f pretty-error src/docs",
+    "fix": "concurrently \"npm:fix-*\"",
+    "fix-prettier": "npx prettier . --write",
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "devDependencies": {
@@ -14,11 +17,15 @@
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "markdownlint-cli": "^0.41.0",
+    "prettier": "^3.3.3",
     "textlint": "^14.2.0",
     "textlint-rule-allowed-uris": "^1.0.1"
   },
   "lint-staged": {
-    "*": "npx editorconfig-checker",
+    "*": [
+      "npx prettier --check",
+      "npx editorconfig-checker"
+    ],
     "*.md": "npx markdownlint",
     "src/docs/**/*.md": "npx textlint -f pretty-error"
   }
