feat: introduction of next react

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "scripts": {
     "prepare": "husky",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "concurrently \"npm:lint-*\"",
     "lint-prettier": "npx prettier . --check",
     "lint-editorconfig": "npx editorconfig-checker",
@@ -10,6 +13,12 @@
     "fix": "concurrently \"npm:fix-*\"",
     "fix-prettier": "npx prettier . --write",
     "count-docs": "ls -R src/docs | grep .md | wc -l"
+  },
+  "dependencies": {
+    "html-react-parser": "^5.1.12",
+    "next": "^14.2.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
