ci: introduction of eslint

--- a/.github/sync-client.yml
+++ b/.github/sync-client.yml
@@ -20,6 +20,8 @@ lumirlumir/lumirlumir-configs:
   # ./
   - source: ./.editorconfig
     dest: ./configs/.editorconfig
+  - source: ./.eslintignore
+    dest: ./configs/.eslintignore
   - source: ./.gitignore
     dest: ./configs/.gitignore
   - source: ./.markdownlint.json
