--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "concurrently \"npm:lint-*\"",
+    "lint-eslint": "npx eslint . --ext .js,.jsx",
     "lint-prettier": "npx prettier . --check",
     "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md",
     "lint-textlint": "npx textlint -f pretty-error src/docs",
     "fix": "concurrently \"npm:fix-*\"",
+    "fix-eslint": "npx eslint . --fix --ext .js,.jsx",
     "fix-prettier": "npx prettier . --write",
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
@@ -23,6 +25,9 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "editorconfig-checker": "^5.1.8",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.6",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "markdownlint-cli": "^0.41.0",
@@ -35,6 +40,7 @@
       "npx prettier --check",
       "npx editorconfig-checker"
     ],
+    "*.{js,jsx}": "npx eslint",
     "*.md": "npx markdownlint",
     "src/docs/**/*.md": "npx textlint -f pretty-error"
   }
