--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "dependencies": {
+    "github-markdown-css": "^5.6.1",
     "html-react-parser": "^5.1.12",
     "next": "^14.2.6",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
     "lint-staged": "^15.2.8",
     "markdownlint-cli": "^0.41.0",
     "prettier": "^3.3.3",
+    "sass": "^1.77.8",
     "textlint": "^14.2.0",
     "textlint-rule-allowed-uris": "^1.0.1"
   },
