--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "github-markdown-css": "^5.6.1",
     "html-react-parser": "^5.1.12",
     "next": "^14.2.6",
