ci: create clang-format related features

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "lint-editorconfig": "npx editorconfig-checker",
     "lint-markdownlint": "npx markdownlint **/*.md",
     "lint-textlint": "npx textlint -f pretty-error src/docs",
+    "lint-clangformat": "find . -name '*.c' -o -name '*.cpp' -print0 | xargs -0 npx clang-format -n -Werror",
     "fix": "concurrently \"npm:fix-*\"",
     "fix-eslint": "npx eslint . --fix --ext .js,.jsx",
     "fix-stylelint": "npx stylelint --fix **/*.{css,scss}",
     "fix-prettier": "npx prettier . --write",
+    "fix-clangformat": "find . -name '*.c' -o -name '*.cpp' -print0 | xargs -0 npx clang-format -i",
     "count-docs": "ls -R src/docs | grep .md | wc -l"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "clang-format-node": "^1.0.0",
     "concurrently": "^8.2.2",
     "editorconfig-checker": "^5.1.8",
     "eslint": "^8.57.0",
@@ -51,6 +54,7 @@
     "*.{js,jsx}": "npx eslint",
     "*.{css,scss}": "npx stylelint",
     "*.md": "npx markdownlint",
-    "src/docs/**/*.md": "npx textlint -f pretty-error"
+    "src/docs/**/*.md": "npx textlint -f pretty-error",
+    "*.{c,cpp}": "npx clang-format -n -Werror"
   }
 }
