fix: glibc version compatibility problem in using clang-format

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,7 @@ jobs:
     #       - markdownlint
 
     runs-on: ubuntu-latest
+    container: ubuntu:latest
 
     steps:
       - name: Set up checkout
