--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "github-markdown-css": "^5.6.1",
+    "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.16",
     "next": "^14.2.11",
     "react": "^18.3.1",
