--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "count-docs": "ls -R src/posts/docs | grep .md | wc -l"
   },
   "dependencies": {
+    "@giscus/react": "^3.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "github-markdown-css": "^5.6.1",
