--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@giscus/react": "^3.0.0",
+    "@types/node": "^22.7.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "github-markdown-css": "^5.7.0",
