--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "html-react-parser": "^5.1.18",
     "next": "^14.2.14",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "clang-format-node": "^1.1.1",
